--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Sveika pasaule!</title>
 </head>
 <body>
-    Datoru uzskaites sistēma
+    <h1>Datoru uzskaites sistēma<h1>
 </body>
 </html>
