--- a/kabineti.html
+++ b/kabineti.html
@@ -9,17 +9,7 @@
             width: 100%;
         }
     </style>
-    <script>
-        function rad(obj) {
-            if (obj.value == "+") {
-                document.getElementById("b" + obj.id).style.display = "block";
-                obj.value = "-";
-            } else {
-                document.getElementById("b" + obj.id).style.display = "none";
-                obj.value = "+";
-            }
-        }
-    </script>
+<script src="js/block.js"></script>   
     <body>
         <table border="1">
             <tr>
@@ -30,7 +20,7 @@
             <thead>
                 <tr>
                     <td>
-                        <input type="button" id="0" value="+" onclick="rad(this);" />
+                        <input type="button" id="0" value="+" onclick="rad(this,'b');" />
                     </td>
                     <th>Pagrabstāvs</th>
                 </tr>
@@ -49,7 +39,7 @@
             <thead>
                 <tr>
                     <td>
-                        <input type="button" id="1" value="+" onclick="rad(this);" />
+                        <input type="button" id="1" value="+" onclick="rad(this,'b');" />
                     </td>
                     <th>1. Stāvs - Bloks A</th>
                 </tr>
