--- a/paraugs_skats.html
+++ b/paraugs_skats.html
@@ -8,7 +8,67 @@
 
         <div class="wrap">
 
-        </div>
+            <div class="header">
+                <img src="logo.PNG" />
+                <h2>Datortehnikas uzskaites sistēma</h2>
+                <hr>
+            </div>
+
+            <div class="content">
+
+                <img src="back.png" />
+                Atpakaļ
+
+                <h4>Nodaļas virsraksts</h4>
+
+                Teksts <br> un vēl teksts
+
+                <p>Pirmais pants</p>
+                <p>Otrais pants pants</p>
+
+                <a href="cits_skats.html">
+                    Atvērt citu skatu
+                </a>
+
+                <table>
+                <th>
+                    <td>ID</td><td>Name</td>
+                </th>
+                <tr>
+                    <td>3</td><td>Kuku</td>
+                </tr>
+                <tr>
+                    <td>6</td><td>Puku</td>
+                </tr>
+                </table>
+
+                Meklēt <input>
+                
+                Izvēlēties tipu
+                <select>
+                    <option>printeris</option>
+                    <option>dators</option>
+                    <option>tumbas</option>
+                </select>
+
+                Kabineti ar proj.
+                <input type="radio">
+
+
+                <ul>
+                    <li>pirmais</li>
+                    <li>otrais</li>
+                </ul>
+
+            </div>
+
+
+            <div class="footer">
+                <hr>
+                (c) 2020 Sia "Kafijas automāts"
+            </div>
+
+        </div><!--beidzas wrap-->
 
     </body>
 
