uzrakstīju css parauga skatam

--- a/paraugs_skats.html
+++ b/paraugs_skats.html
@@ -2,6 +2,7 @@
 
     <head>
         <title>Paraugs skats</title>
+        <link href="css/style.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -16,7 +17,7 @@
 
             <div class="content">
 
-                <img src="back.png" />
+                <img class="back_btn" src="back.png" />
                 Atpakaļ
 
                 <h4>Nodaļas virsraksts</h4>
@@ -26,7 +27,7 @@
                 <p>Pirmais pants</p>
                 <p>Otrais pants pants</p>
 
-                <a href="cits_skats.html">
+                <a class="button" href="cits_skats.html">
                     Atvērt citu skatu
                 </a>
 
