--- a/paraugs_skats.html
+++ b/paraugs_skats.html
@@ -11,7 +11,7 @@
         <div class="wrap">
 
             <div class="header">
-                <img src="logo.PNG" />
+                <img src="logo.png" />
                 <h2>Datortehnikas uzskaites sistēma</h2>
                 <hr>
             </div>
