--- a/paraugs_skats.html
+++ b/paraugs_skats.html
@@ -12,6 +12,7 @@
 
             <div class="header">
                 <img src="logo.png" />
+                <!-- git test andris-->
                 <h2>Datortehnikas uzskaites sistēma</h2>
                 <hr>
             </div>
