pielaboju bilžu ceļus

--- a/paraugs_skats.html
+++ b/paraugs_skats.html
@@ -10,7 +10,7 @@
         <div class="wrap">
 
             <div class="header">
-                <img src="logo.png" />
+                <img src="img/logo.png" />
                 <!-- git test andris-->
                 <h2>Datortehnikas uzskaites sistēma</h2>
                 <hr>
@@ -18,7 +18,7 @@
 
             <div class="content">
 
-                <img class="back_btn" src="back.png" />
+                <img class="img/back_btn" src="back.png" />
                 Atpakaļ
 
                 <h4>Nodaļas virsraksts</h4>
