--- a/kabineti.html
+++ b/kabineti.html
@@ -4,14 +4,19 @@
         <meta charset="UTF-8" />
         <title>Kabineti</title>
     </head>
+		<link href="css/style.css" rel="stylesheet" />
     <style type="text/css">
         td > input {
             width: 100%;
         }
     </style>
-<script src="js/block.js"></script>   
-    <body>
-        <table border="1">
+	<script src="js/block.js"></script>
+	<script src="js/head.js"></script>
+	<body>
+
+	<script>head("Kabinetu saraksts");</script>
+
+		<table border="1">
             <tr>
                 <caption>
                     Atrašānās vieta
