--- a/paraugs_skats.html
+++ b/paraugs_skats.html
@@ -18,7 +18,7 @@
 
             <div class="content">
 
-                <img class="img/back_btn" src="back.png" />
+                <img class="img/back_btn" src="img/back.png" />
                 Atpakaļ
 
                 <h4>Nodaļas virsraksts</h4>
