pielaoju ta bulu

--- a/paraugs_skats.html
+++ b/paraugs_skats.html
@@ -32,17 +32,17 @@
                     Atvērt citu skatu
                 </a>
 
-                <table>
-                <th>
-                    <td>ID</td><td>Name</td>
-                </th>
-                <tr>
-                    <td>3</td><td>Kuku</td>
-                </tr>
-                <tr>
-                    <td>6</td><td>Puku</td>
-                </tr>
-                </table>
+				<table>
+					<tr>
+						<th>ID</th><th>Name</th>
+					</tr>
+					<tr>
+						<td>3</td><td>Kuku</td>
+					</tr>
+					<tr>
+						<td>6</td><td>Puku</td>
+					</tr>
+				</table>
 
                 Meklēt <input>
                 
