--- a/paraugs_skats.html
+++ b/paraugs_skats.html
@@ -47,11 +47,12 @@
                 Meklēt <input>
                 
                 Izvēlēties tipu
-                <select>
-                    <option>printeris</option>
-                    <option>dators</option>
-                    <option>tumbas</option>
-                </select>
+				<select>
+					<option disabled selected hidden></option>
+					<option>printeris</option>
+					<option>dators</option>
+					<option>tumbas</option>
+				</select>
 
                 Kabineti ar proj.
                 <input type="radio">
