ievietoju head foot funciju

--- a/kabineti.html
+++ b/kabineti.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <title>Kabineti</title>
-    </head>
 		<link href="css/style.css" rel="stylesheet" />
-    <style type="text/css">
-        td > input {
-            width: 100%;
-        }
-    </style>
-	<script src="js/block.js"></script>
-	<script src="js/head.js"></script>
+		<style type="text/css">
+			td > input {
+				width: 100%;
+			}
+		</style>
+		<script src="js/block.js"></script>
+		<script src="js/head_food.js"></script>
+    </head>
 	<body>
 
-	<script>head("Kabinetu saraksts");</script>
+	<script>head("Iekārtu saraksts");</script>
 
 		<table border="1">
             <tr>
@@ -70,5 +70,6 @@
                 </tr>
             </tbody>
         </table>
+	<script>foot();</script>
     </body>
 </html>
