--- a/visas_tehnikas_db.html
+++ b/visas_tehnikas_db.html
@@ -17,7 +17,6 @@
         }
 
         #myInput {
-            background-image: url('/css/searchicon.png');
             background-position: 10px 10px;
             background-repeat: no-repeat;
             width: 100%;
@@ -93,11 +92,11 @@
     <table id="myTable">
         <thead>
             <tr>
-                <th>Tips</span></th>
-                <th>inventāra nr.</span></th>
-                <th>kabinets</span></th>
-                <th>-</span></th>
-                <th>sīkāka informācija</span></th>
+                <th>Tips</th>
+                <th>inventāra nr.</th>
+                <th>kabinets</th>
+                <th>-</th>
+                <th>sīkāka informācija</th>
             </tr>
         </thead>
         <tbody>
