--- a/kabineti.html
+++ b/kabineti.html
@@ -16,7 +16,7 @@
 
 	<script>head("Iekārtu saraksts");</script>
 
-		<table border="1">
+		<table>
             <tr>
                 <caption>
                     Atrašānās vieta
