--- a/klase.html
+++ b/klase.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 		<script>head("Kabinetu saraksts");</script>
-        <table border="1">
+        <table>
             <thead>
                 <tr>
                     <td>
