--- a/visas_tehnikas_db.html
+++ b/visas_tehnikas_db.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -10,62 +9,6 @@
     <script src='js/block.js'></script>
     <script src='js/head_food.js'></script>
     <script src='js/mekleet.js'></script>
-    <!-- mekleesana-->
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        #myInput {
-            background-position: 10px 10px;
-            background-repeat: no-repeat;
-            width: 100%;
-            font-size: 16px;
-            padding: 12px 20px 12px 40px;
-            border: 1px solid #ddd;
-            margin-bottom: 12px;
-        }
-
-        #myTable {
-            border-collapse: collapse;
-            width: 100%;
-            border: 1px solid #ddd;
-            font-size: 18px;
-        }
-
-        #myTable th,
-        #myTable td {
-            text-align: left;
-            padding: 12px;
-        }
-
-        #myTable tr {
-            border-bottom: 1px solid #ddd;
-        }
-
-        #myTable tr.header,
-        #myTable tr:hover {
-            background-color: #f1f1f1;
-        }
-    </style>
-    <!-- mekleesana-->
-    <style>
-        .row {
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-            margin-right: 15px;
-            margin-left: 15px;
-        }
-
-        .col {
-            position: relative;
-            width: 33%;
-            padding-right: 15px;
-            padding-left: 15px;
-        }
-    </style>
 </head>
 
 <body>
@@ -73,7 +16,6 @@
     <!-- -->
     <div class="row">
         <div class="col">
-            atlasīt tehniku
             <select id="mySelect">
                 <option disabled selected hidden></option>
                 <option value="">Viss saraksts</option>
@@ -82,19 +24,18 @@
                 <option value="tumbas">tumbas</option>
             </select>
             <!-- *********************** -->
-            <button type="button" onclick="myFunction()" >atlasīt</button>
-            
+            <button type="button" onclick="myFunction()">atlasīt tehniku</button>
             <script>
                 function myFunction() {
-                    var x = document.getElementById("mySelect").value;
-                    document.getElementById("demo").innerHTML = x;
+                    //var x = document.getElementById("mySelect").value;
+                   // document.getElementById("demo").innerHTML = x;
                     meklet(0,'mySelect');
                 }
             </script>
             <p id="demo"></p>
             <!--*************************** -->
-
         </div>
+
         <div class="col">
             <input type="text" placeholder="Mekēt pec inventāra numura" id="myInput" onkeyup="meklet(1,'myInput')">
         </div>
