--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sveika pasaule!</title>
-</head>
-<body>
-    <h1>Datoru uzskaites sistēma<h1>
-</body>
+<html>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Skolas datortehnikas uzskaite</title>
+		<meta name='viewport' content='width=device-width, initial-scale=1'>
+		<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+		<script src="js/head_food.js"></script>
+	</head>
+	<body>
+    <!-- <h1>Datoru uzskaites sistēma<h1> -->
+	<script>head("");</script>
+		<table class="noborder">
+			<tr>
+				<td>Lietotāja vārds</td>
+				<td><input type="text"></td>
+				<td><input type="submit" value="Kabinetos pielietojamā tehnika" onclick="window.location.href ='visu_klases_tehnikas_db.html'"></td>
+			</tr>
+			<tr>
+				<td>Parole</td>
+				<td><input type="password" name=""></td>
+				<td><input type="submit" value="Ziņot par problēmu ar tehniku" onclick="window.location.href =''"></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td><input type="submit" value="Pierakstīties" onclick="window.location.href =''"></td>
+			</tr>
+		</table>
+		<script>foot();</script>
+	</body>
 </html>
