--- a/klases_tehnikas_db.html
+++ b/klases_tehnikas_db.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
-        <title>Kabineti</title>
+		<meta charset="UTF-8" />
+		<title>Datoru uzskaites sistēma-Kabineti</title>
 		<link href="css/style.css" rel="stylesheet" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="js/head_food.js"></script>
 	<script>
 		var json='{'+
