pieliku atpakaļ pogas darbību

--- a/admin.html
+++ b/admin.html
@@ -18,8 +18,10 @@
 
             <div class="content">
 
+               <a href="#" onclick="history.go(-1)">
                 <img class="back_btn" src="img/back.png" />
                 Atpakaļ
+               </a>
 
                 <h4 id="h4b">Admin skats</h4>
 				<table class="noborder">
@@ -31,7 +33,7 @@
                         
                         <td colspan="2"><input type="submit" value="Problēmu ziņojums" onclick="window.location.href =''"></td></th>
                     
-                        <td><input type="submit" value="Tehnikas datubāze" onclick="window.location.href =''"></td>
+                        <td><input type="submit" value="Tehnikas datubāze" onclick="window.location.href ='visas_tehnikas_db.html'"></td>
                     </tr>
                 </table>
 
