pievienoju link uz admin.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</tr>
 			<tr>
 				<td></td>
-				<td><input type="submit" value="Pierakstīties" onclick="window.location.href =''"></td>
+				<td><input type="submit" value="Pierakstīties" onclick="window.location.href ='admin.html'"></td>
 			</tr>
 		</table>
 		<script>foot();</script>
