--- a/klases_tehnikas_db.html
+++ b/klases_tehnikas_db.html
@@ -6,16 +6,18 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 		<script src="js/head_food.js"></script>
 		<script src="js/angular.js"></script>
+		<script src="js/get.js"></script>
 		<link href="css/style.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script>
+		var kab=findGetParameter("k");// kosaka kabinetu
 		var json='{"klase":"201", "dati":[{"name":"datori","count":3,"bojats":0,"desk":""},{"name":"Printeris","count":1,"bojats":"0","desk":"tīkla"}, {"name":"Projektors","count":1,"bojats":1,"desk":"2HDMI"}, {"name":"Skandas","count":1,"bojats":"0","desk":""}, {"name":"Rūteris","count":1,"bojats":0,"desk":"Parole:fkjbvjdf"}]}';
 		var obj = JSON.parse(json); 
 	</script>
 	</head>
 	<body>
 	<div ng-app="myApp" ng-controller="myCtrl"><!-- start angular -->
-	<script>head(obj.klase+". klasē pieejamā tehnika");</script>
+	<script>head(kab+". klasē pieejamā tehnika");</script>
 			<table>
 				<tbody ng-repeat="i in dati">
 					<tr>
