--- a/admin.html
+++ b/admin.html
@@ -18,13 +18,13 @@
 
             <div class="content">
 
-               <a href="#" onclick="history.go(-1)">
+               <a href="">
                 <img class="back_btn" src="img/back.png" />
                 Atpakaļ
                </a>
 
                 <h4 id="h4b">Admin skats</h4>
-				<table class="noborder">
+				<div >
                     <tr>
                         <td>meklēt tehniku</td> <td><input></td>
                         <td><input type="submit" value="Kabinetos pieejamā tehnika" onclick="window.location.href ='visu_klases_tehnikas_db.html'"></td>
