lieku admin izmainas

--- a/admin.html
+++ b/admin.html
@@ -18,15 +18,17 @@
 
         <div class="content">
 
-            <a href="">
+            <a href="index.html">
                 <img class="back_btn" src="img/back.png" />
                 Atpakaļ
             </a>
 
             <h4 id="h4b">Admin skats</h4>
             <div class="flex">
-                <div>meklēt tehniku <input>
+                <div>
+                    meklēt tehniku <input>
                     <br>
+
                     <a class="button" href="">Problēmu ziņojums</a>
                 </div>
                 <div>
