labots Klases tehnika

--- a/klases_tehnika.html
+++ b/klases_tehnika.html
@@ -8,7 +8,7 @@
     <body>
        <div class ="wrap">
         <div class ="header">
-            <img src="atteli/tehnika.png"/>
+            <img src="img/logo.png"/>
             <h2>Skolas datortehnikas uzskaite</h2>
             <hr>
         </div><!--beidzas galva-->
@@ -18,8 +18,10 @@
 
         <div class ="body">
          
-            <img src="atteli/back.png"/>
-            atpakaļ
+            <a href="index.html">
+                <img class="back_btn" src="img/back.png" />
+                Atpakaļ
+               </a>
             <h4> Klasēs pieejamā tehnika</h4><br>
 
             <!--meklēt-->
@@ -31,7 +33,7 @@
            <div class="col">
             <label for="datori">ir datori</label>
             <input type="radio" id="datori">
-            <label for="tumbas">ir tumbas</label>
+            <label for="tumbas">ir skandas</label>
             <input type="radio" id="tumbas"><br>
             <label for="projektors">ir projektors</label>
             <input type="radio" id="projektors">
@@ -41,13 +43,13 @@
             <!--tabula-->
             <table>
                 <tr>
-                   <th>kab. nr.</th> <th>projektors</th><th>datoru skaits</th><th>tumbas</th><th>sīkāka informācija</th>
+                   <th>kabineta nr.</th> <th>projektors</th><th>datoru skaits</th><th>skandas</th><th>sīkāka informācija</th>
                 </tr>
                 <tr>
-                    <td>14.</td> <td>&#x2713</td><td>1</td><td>&#x2713</td><td><a href="konkreta_klase.html">sīkāka informācija</a></td>
+                    <td>14.</td> <td>&#x2713</td><td>1</td><td>&#x2713</td><td><a href="klases_tehnikas_db.html">sīkāka informācija</a></td>
                  </tr>
                  <tr>
-                  <td>64.</td> <td>&#x2713</td><td>7</td><td>-</td><td><a href="konkreta_klase.html">sīkāka informācija</a></td>
+                  <td>64.</td> <td>&#x2713</td><td>7</td><td>-</td><td><a href="klases_tehnikas_db.html">sīkāka informācija</a></td>
                </tr>
                
             </table>
