--- a/admin.html
+++ b/admin.html
@@ -26,15 +26,20 @@
             <h4 id="h4b">Admin skats</h4>
             <div class="flex">
                 <div>
-                    meklēt tehniku <input>
+                    Meklēt tehniku 
+                </div>
+                <div>
+                    <input type="text">
+                    <br>
                     <br>
 
                     <a class="button" href="">Problēmu ziņojums</a>
                 </div>
                 <div>
-                    <a class="button" href="">Kabinetos pieejamā tehnika</a>
+                    <a class="button" href="visu_klases_tehnikas_db.html">Kabinetos pieejamā tehnika</a>
                     <br>
-                    <a class="button" href="">Tehnikas datubāze</a>
+                    <br>
+                    <a class="button" href="visas_tehnikas_db.html">Tehnikas datubāze</a>
                 </div>
             </div>
 
