--- a/index.html
+++ b/index.html
@@ -5,26 +5,42 @@
 		<title>Skolas datortehnikas uzskaite</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-		<script src="js/head_food.js"></script>
 	</head>
 	<body>
-    <!-- <h1>Datoru uzskaites sistēma<h1> -->
-	<script>head("");</script>
-	<br>
-		<div class="flex">
-			<div>
-				<label>Lietotāja vārds</label><br><br>
-				<label>Parole</label><br><br>
-			</div><div>
-				<input type="text"><br><br>
-				<input type="password"><br><br>
-				<a class="button" href="admin.html">Pierakstīties</a>
+  
+		<div class="wrap">
+
+			<div class="header">
+				<img src="img/logo.png" />
+				<h2>Datortehnikas uzskaites sistēma</h2>
+				<hr>
 			</div>
-			<div>
-				<a class="button" href="visu_klases_tehnikas_db.html">Kabinetos pielietojamā tehnika</a><br><br>
-				<a class="button" href="visu_klases_tehnikas_db.html">Ziņot par problēmu ar tehniku</a>
+	
+			<div class="content">
+				<br>
+				<div class="flex">
+					<div>
+						<label>Lietotāja vārds</label><br><br>
+						<label>Parole</label><br><br>
+					</div><div>
+						<input type="text"><br><br>
+						<input type="password"><br><br>
+						<a class="button" href="admin.html">Pierakstīties</a>
+					</div>
+					<div>
+						<a class="button" href="visu_klases_tehnikas_db.html">Kabinetos pielietojamā tehnika</a><br><br>
+						<a class="button" href="">Ziņot par problēmu ar tehniku</a>
+					</div>
+				</div>
 			</div>
-		</div>
-		<script>foot();</script>
+
+
+			<div class="footer">
+				<hr>
+				(c) 2020 Sia "Kafijas automāts"
+			</div>
+
+		</div><!--beidzas wrap-->
+
 	</body>
 </html>
