--- a/klases_tehnika.html
+++ b/klases_tehnika.html
@@ -53,7 +53,11 @@
             <!--tabula-->
             <table>
                 <tr>
-                   <th>kabineta nr.</th> <th>projektors</th><th>datoru skaits</th><th>skandas</th><th>sīkāka informācija</th>
+                   <th>kabineta nr.</th> 
+                   <th>projektors</th>
+                   <th>datoru skaits</th>
+                   <th>skandas</th>
+                   <th>sīkāka informācija</th>
                 </tr>
                 <tr>
                     <td>14.</td> 
