--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<a class="button" href="admin.html">Pierakstīties</a>
 					</div>
 					<div>
-						<a class="button" href="visu_klases_tehnikas_db.html">Kabinetos pielietojamā tehnika</a><br><br>
+						<a class="button" href="klases_tehnika.html">Kabinetos pielietojamā tehnika</a><br><br>
 						<a class="button" href="">Ziņot par problēmu ar tehniku</a>
 					</div>
 				</div>
