--- a/klases_tehnika.html
+++ b/klases_tehnika.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>
+				<meta charset="UTF-8" />
             Klasēs pieejamā datortehnika
         </title>
         <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
