--- a/klases_tehnika.html
+++ b/klases_tehnika.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>
-				<meta charset="UTF-8" />
             Klasēs pieejamā datortehnika
         </title>
+		<meta charset="UTF-8" />
         <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
     </head>
     <body>
@@ -20,7 +20,7 @@
     <div class ="body">
         <div class="flex"> <!--saliek blakus kastes-->
             <div class="col">
-            <a href="index.html">
+            <a href="klases_tehnika.html">
                 <img class="back_btn" src="img/back.png" />
                 Atpakaļ
                </a>
@@ -57,10 +57,10 @@
                    <th>kabineta nr.</th> <th>projektors</th><th>datoru skaits</th><th>skandas</th><th>sīkāka informācija</th>
                 </tr>
                 <tr>
-                    <td>14.</td> <td>&#x2713</td><td>1</td><td>&#x2713</td><td><a href="klases_tehnikas_db.html">sīkāka informācija</a></td>
+                    <td>14.</td> <td>&#x2713</td><td>1</td><td>&#x2713</td><td><a href="klases_tehnikas_db.html?k=14">sīkāka informācija</a></td>
                  </tr>
                  <tr>
-                  <td>64.</td> <td>&#x2713</td><td>7</td><td>-</td><td><a href="klases_tehnikas_db.html">sīkāka informācija</a></td>
+                  <td>64.</td> <td>&#x2713</td><td>7</td><td>-</td><td><a href="klases_tehnikas_db.html?k=64.">sīkāka informācija</a></td>
                </tr>
                
             </table>
